use new disks client in all cases